# libnpcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md
cmake/: BuildLibnpc.cmake
docs/: fns.js  i18n.js  index.html
examples/: CMakeLists.txt  basic_usage.cpp
include/npc/: array.hpp  creation.hpp  dtype.hpp  npc.hpp
include/npc/detail/: deleter.hpp  shape_util.hpp
include/npc/ops/: arithmetic.hpp  comparison.hpp  complex.hpp  datetime64.hpp  einsum.hpp  fft.hpp  histogram.hpp  interp.hpp  io.hpp  isclose.hpp  linalg.hpp  logical.hpp  math_binary.hpp  math_extra.hpp  math_unary.hpp  misc.hpp  mutation.hpp  nan_utils.hpp  polynomial.hpp  random.hpp  setops.hpp  shape.hpp  sorting.hpp  stats.hpp  window.hpp
test/: CMakeLists.txt  test_array.cpp  test_cleanup.cpp  test_fft.cpp  test_histogram.cpp  test_interp.cpp  test_io.cpp  test_linalg.cpp  test_math.cpp  test_misc.cpp  test_polynomial.cpp  test_random.cpp  test_setops.cpp  test_shape.cpp  test_stats.cpp
